[gd_scene load_steps=9 format=3 uid="uid://6ghh3v87x3px"]

[ext_resource type="Script" path="res://src/ui/HUD/hud_controller.gd" id="1_lx3u3"]
[ext_resource type="Texture2D" uid="uid://bolh3oo7nn6b4" path="res://assets/UI/UIBackground.png" id="2_ajc0p"]
[ext_resource type="Theme" uid="uid://6uaa4ea3yn5x" path="res://assets/UI/Themes/UI_Theme.tres" id="3_wvp4g"]
[ext_resource type="Texture2D" uid="uid://tsdi3ybb5qjd" path="res://assets/UI/Illustration51_12.png" id="5_cb35d"]
[ext_resource type="Texture2D" uid="uid://dl7hnhnly77cm" path="res://assets/UI/Illustration51_14.png" id="6_dvoap"]

[sub_resource type="Animation" id="Animation_24tve"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_nt771"]
resource_name = "WalkAnim"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -30), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x38l7"]
_data = {
"RESET": SubResource("Animation_24tve"),
"WalkAnim": SubResource("Animation_nt771")
}

[node name="Hud" type="MarginContainer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -200.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_lx3u3")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_ajc0p")
expand_mode = 1

[node name="Polygon2D" type="Polygon2D" parent="TextureRect"]
position = Vector2(0, -73)
texture = ExtResource("2_ajc0p")
polygon = PackedVector2Array(2, 37, 23, 37, 23, 73, 34, 73, 34, 61, 46, 61, 46, 73, 61.4975, 73.0613, 60, 56, 81, 56, 81, 38, 104, 37, 104, 73, 136, 73, 136, 58, 156, 58, 157, 73, 170, 74, 170, 39, 187, 39, 186, 73, 207, 73, 207, 44, 220, 44, 220, 60, 234, 60, 234, 73, 256, 73, 256, 49, 274, 49, 274, 72, 318, 72, 318, 54, 335, 54, 336, 71, 348, 71, 348, 42, 367, 42, 367, 72, 383, 72, 383, 59, 399, 59, 399, 72, 423, 72, 425, 83, 1, 79)

[node name="Polygon2D" type="Polygon2D" parent="TextureRect/Polygon2D"]
position = Vector2(418.84, 0.75)
scale = Vector2(1.02594, 1)
texture = ExtResource("2_ajc0p")
polygon = PackedVector2Array(2, 37, 23, 37, 23, 73, 34, 73, 34, 61, 46, 61, 46, 73, 61.4975, 73.0613, 60, 56, 81, 56, 81, 38, 104, 37, 104, 73, 136, 73, 136, 58, 156, 58, 157, 73, 170, 74, 170, 39, 187, 39, 186, 73, 207, 73, 207, 44, 220, 44, 220, 60, 234, 60, 234, 73, 256, 73, 256, 49, 274, 49, 274, 72, 318, 72, 318, 54, 335, 54, 336, 71, 348, 71, 348, 42, 367, 42, 367, 72, 383, 72, 383, 59, 399, 59, 399, 72, 423, 72, 425, 83, 1, 79)

[node name="Polygon2D" type="Polygon2D" parent="TextureRect/Polygon2D/Polygon2D"]
position = Vector2(418.84, 0.75)
scale = Vector2(1.02594, 1)
texture = ExtResource("2_ajc0p")
polygon = PackedVector2Array(2, 37, 23, 37, 23, 73, 34, 73, 34, 61, 46, 61, 46, 73, 61.4975, 73.0613, 60, 56, 81, 56, 81, 38, 104, 37, 104, 73, 136, 73, 136, 58, 156, 58, 157, 73, 170, 74, 170, 39, 187, 39, 186, 73, 207, 73, 207, 44, 220, 44, 220, 60, 234, 60, 234, 73, 256, 73, 256, 49, 274, 49, 274, 72, 318, 72, 318, 54, 335, 54, 336, 71, 348, 71, 348, 42, 367, 42, 367, 72, 383, 72, 383, 59, 399, 59, 399, 72, 423, 72, 425, 83, 1, 79)

[node name="Polygon2D" type="Polygon2D" parent="TextureRect/Polygon2D/Polygon2D/Polygon2D"]
position = Vector2(418.84, 0.75)
scale = Vector2(1.02594, 1)
texture = ExtResource("2_ajc0p")
polygon = PackedVector2Array(2, 37, 23, 37, 23, 73, 34, 73, 34, 61, 46, 61, 46, 73, 61.4975, 73.0613, 60, 56, 81, 56, 81, 38, 104, 37, 104, 73, 136, 73, 136, 58, 156, 58, 157, 73, 170, 74, 170, 39, 187, 39, 186, 73, 207, 73, 207, 44, 220, 44, 220, 60, 234, 60, 234, 73, 256, 73, 256, 49, 274, 49, 274, 72, 318, 72, 318, 54, 335, 54, 336, 71, 348, 71, 348, 42, 367, 42, 367, 72, 383, 72, 383, 59, 399, 59, 399, 72, 423, 72, 425, 83, 1, 79)

[node name="Polygon2D" type="Polygon2D" parent="TextureRect/Polygon2D/Polygon2D/Polygon2D/Polygon2D"]
position = Vector2(418.84, 0.75)
scale = Vector2(1.02594, 1)
texture = ExtResource("2_ajc0p")
polygon = PackedVector2Array(2, 37, 23, 37, 23, 73, 34, 73, 34, 61, 46, 61, 46, 73, 61.4975, 73.0613, 60, 56, 81, 56, 81, 38, 104, 37, 104, 73, 136, 73, 136, 58, 156, 58, 157, 73, 170, 74, 170, 39, 187, 39, 186, 73, 207, 73, 207, 44, 220, 44, 220, 60, 234, 60, 234, 73, 256, 73, 256, 49, 274, 49, 274, 72, 318, 72, 318, 54, 335, 54, 336, 71, 348, 71, 348, 42, 367, 42, 367, 72, 383, 72, 383, 59, 399, 59, 399, 72, 423, 72, 425, 83, 1, 79)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_right = 250

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="Button" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_wvp4g")
text = "Pause"

[node name="Button2" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_wvp4g")
text = "How-to"

[node name="Button3" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_wvp4g")
text = "Menu
"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_constants/separation = 100

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("3_wvp4g")
theme_override_font_sizes/font_size = 100
text = "CITY
"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="CityStats" type="GridContainer" parent="MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/h_separation = 16
columns = 2

[node name="LabelCityTotal" type="Label" parent="MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer/CityStats"]
layout_mode = 2
theme = ExtResource("3_wvp4g")
text = "Total:"

[node name="CityTotal" type="Label" parent="MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer/CityStats"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_wvp4g")
horizontal_alignment = 2

[node name="LabelCityInfected" type="Label" parent="MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer/CityStats"]
layout_mode = 2
theme = ExtResource("3_wvp4g")
text = "Infected:"

[node name="CityInfected" type="Label" parent="MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer/CityStats"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_wvp4g")
horizontal_alignment = 2

[node name="LabelCityGood" type="Label" parent="MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer/CityStats"]
layout_mode = 2
theme = ExtResource("3_wvp4g")
text = "Healthy:"

[node name="CityGood" type="Label" parent="MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer/CityStats"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_wvp4g")
horizontal_alignment = 2

[node name="LabelCityDeath" type="Label" parent="MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer/CityStats"]
layout_mode = 2
theme = ExtResource("3_wvp4g")
text = "Dead:"

[node name="CityDeath" type="Label" parent="MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer/CityStats"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_wvp4g")
horizontal_alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label2" type="Label" parent="MarginContainer/HBoxContainer/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("3_wvp4g")
theme_override_font_sizes/font_size = 100
text = "SOUP"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="CityStats2" type="GridContainer" parent="MarginContainer/HBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/h_separation = 16
columns = 2

[node name="LabelSoupTotal" type="Label" parent="MarginContainer/HBoxContainer/HBoxContainer2/VBoxContainer2/CityStats2"]
layout_mode = 2
theme = ExtResource("3_wvp4g")
text = "Total:"

[node name="SoupTotal" type="Label" parent="MarginContainer/HBoxContainer/HBoxContainer2/VBoxContainer2/CityStats2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_wvp4g")
horizontal_alignment = 2

[node name="LabelSoupInfected" type="Label" parent="MarginContainer/HBoxContainer/HBoxContainer2/VBoxContainer2/CityStats2"]
layout_mode = 2
theme = ExtResource("3_wvp4g")
text = "Infected:"

[node name="SoupInfected" type="Label" parent="MarginContainer/HBoxContainer/HBoxContainer2/VBoxContainer2/CityStats2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_wvp4g")
horizontal_alignment = 2

[node name="LabelSoupGood" type="Label" parent="MarginContainer/HBoxContainer/HBoxContainer2/VBoxContainer2/CityStats2"]
layout_mode = 2
theme = ExtResource("3_wvp4g")
text = "Healthy:"

[node name="SoupGood" type="Label" parent="MarginContainer/HBoxContainer/HBoxContainer2/VBoxContainer2/CityStats2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_wvp4g")
horizontal_alignment = 2

[node name="LabelCityTime" type="Label" parent="MarginContainer/HBoxContainer/HBoxContainer2/VBoxContainer2/CityStats2"]
visible = false
layout_mode = 2
theme = ExtResource("3_wvp4g")
text = "Time:"

[node name="SoupTime" type="Label" parent="MarginContainer/HBoxContainer/HBoxContainer2/VBoxContainer2/CityStats2"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme = ExtResource("3_wvp4g")
horizontal_alignment = 2

[node name="GodzillaPosition" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(1630, -67)
scale = Vector2(0.2, 0.2)

[node name="Sprite2D" type="Sprite2D" parent="GodzillaPosition"]
z_index = 1
texture = ExtResource("5_cb35d")

[node name="AnimationPlayer" type="AnimationPlayer" parent="GodzillaPosition/Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_x38l7")
}
autoplay = "WalkAnim"

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(1807, -92)
scale = Vector2(0.13, 0.13)
texture = ExtResource("6_dvoap")
